<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary" />


        </android.support.design.widget.AppBarLayout>

    </android.support.design.widget.CoordinatorLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/strResetPassword"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etCurrentPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/border"
                    android:hint="@string/strCurrentPassword"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etNewPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/border"
                    android:hint="@string/strNewPassword"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etConfirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/border"
                    android:hint="@string/strConfirmPassword"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

