<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rgRecipient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin">

                <RadioButton
                    android:id="@+id/rbPublic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:paddingEnd="8dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="8dp"
                    android:paddingStart="0dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="8dp"
                    android:paddingStart="0dp"
                    android:src="@drawable/ic_public_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/strPublic"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/strPublicDesc" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f3f3f3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin">

                <RadioButton
                    android:id="@+id/rbKomuniti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="8dp"
                    android:paddingStart="0dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="8dp"
                    android:paddingStart="0dp"
                    android:src="@drawable/ic_group_work_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/strMyKomuniti"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/strSelectedUser" />

                </LinearLayout>
            </LinearLayout>

        </RadioGroup>


        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="#f3f3f3" />-->

        <!--<utils.TagsEditText-->
            <!--android:id="@+id/etRecipient"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/strChooseRecipient"-->
            <!--android:padding="@dimen/activity_horizontal_margin"-->
            <!--android:visibility="gone" />-->

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>