<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />


    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <RelativeLayout
            android:id="@+id/rlIfLoggedIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/my_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <RelativeLayout
                android:id="@+id/rlNoAnnounceChild"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">


                <ImageView
                    android:id="@+id/imgNoData"
                    android:layout_width="wrap_content"
                    android:layout_height="125dp"
                    android:layout_above="@+id/txtNoSignal"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/no_signal_internet"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/txtNoSignal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/strErrConnection"
                    android:textAlignment="center"
                    android:textColor="#757575"
                    android:textSize="18sp"
                    android:visibility="invisible" />
            </RelativeLayout>

            <!--<android.support.design.widget.FloatingActionButton-->
            <!--android:id="@+id/fab"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_gravity="end|bottom"-->
            <!--android:layout_marginBottom="22dp"-->
            <!--android:layout_marginEnd="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:src="@drawable/ic_message_white_24dp" />-->
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/llIfNotLoggedIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:visibility="gone">


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_error_black_24dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/strNotLoggedInAlert" />

            <Button
                android:id="@+id/btnGoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/strLogIn" />
        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
